--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 08 09:16:28 CET 2024
-sdk.dir=/Users/thom/Library/Android/sdk
+#Fri Nov 29 10:29:26 CET 2024
+sdk.dir=C\:\\Users\\matte\\AppData\\Local\\Android\\Sdk
