--- a/local.properties
+++ b/local.properties
@@ -1,8 +1,4 @@
-## This file must *NOT* be checked into Version Control Systems,
-# as it contains information specific to your local configuration.
-#
-# Location of the SDK. This is only used by Gradle.
-# For customization when using a Version Control System, please read the
-# header note.
-#Fri Nov 29 15:45:32 CET 2024
-sdk.dir=C:\\Users\\matte\\AppData\\Local\\Android\\Sdk
+
+sdk.dir=/Users/thom/Library/Android/sdk
+
+#sdk.dir=C:\\Users\\matte\\AppData\\Local\\Android\\Sdk
